--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  /* --primary-color:  */
+  --background: #fff;
+  --card-bg: #F2F2F1;
+  --shadow-color: #E8E8E9;
+
+  --lg-breakpoint: ;
+  --md-breakpoint: ;
+  --sm-breakpoint: ;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +21,5 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background: var(--background)
 }
