--- a/src/shared/components/Buttons/Buttons.module.css
+++ b/src/shared/components/Buttons/Buttons.module.css
@@ -1,5 +1,4 @@
-.likeButton,
-.unlikeButton {
+.button{
     background: #fff;
     width: 40px;
     height: 40px;
@@ -9,4 +8,9 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    outline: none;
+}
+
+.button:focus {
+    outline: 2px solid #000;
 }
