--- a/src/shared/components/Buttons/Buttons.module.css
+++ b/src/shared/components/Buttons/Buttons.module.css
@@ -1,9 +1,10 @@
 .button{
     background: #fff;
+    opacity: 0.3;
+    backdrop-filter: blur(10px);
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    border: 1px solid #ccc;
+    border-radius: 5px;
     display: grid;
     justify-content: center;
     align-items: center;
@@ -11,6 +12,7 @@
     outline: none;
 }
 
-.button:focus {
-    outline: 2px solid #000;
+.button:focus,
+.button:hover {
+    opacity: 0.7;
 }
