--- a/src/shared/components/Card/Card.module.css
+++ b/src/shared/components/Card/Card.module.css
@@ -5,51 +5,88 @@
     padding: 0;
     margin: 0;
     background: #fff;
-    border-radius: 3px;
-    border: 2px solid #eee;
-    box-shadow: 4px 4px 0px 0px var(--shadow-color);
+    /* border-radius: 3px; */
+    /* border: 2px solid #eee;
+    box-shadow: 4px 4px 0px 0px var(--shadow-color); */
     transition: all .2s ease-in;
 }
 .componentContainer:hover {
     position: relative;
-    bottom: 2px;
+    bottom: 5px;
     box-shadow: 10px 10px 0px 0px var(--shadow-color);
 }
 
 .cardHeader {
-    height: 300px;
-    width: 100%;
     position: relative;
 }
 
 .cardHeader > img {
+    object-fit: cover;
+    object-position: center;
     display: block;
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
 
 .likeButtonContainer {
     position: absolute;
-    bottom: -15px;
-    left: -1px;
+    bottom: 5%;
+    right: 5%;
 }
 
-.cardContent,
-.cardFooter {
-    padding: 6px 15px 2px;
+.cardContent {
+    padding: 6px 2px 2px;
     width: 100%;
 }
-.cardContent {
-    border-bottom: 1px solid var(--shadow-color);
+
+.cardContent > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.cardContent .title {
+    font-size: 32px;
+    font-family: FuturaPTDemi;
+    margin: 0;
+} 
+.cardContent .launchAndLandDate > * {
+    display: inline-block;
+    font-size: 17px;  
 }
 
-.cardFooter > div {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-bottom: 5px;
+.launchAndLandDate > *:first-child {
+    margin-right: 20px;
 }
-.cardFooter > div > span {
-    display: block;
-    margin-left: 10px;
+.launchAndLandDate img {
+    margin-right: 5px;
+}
+.launchAndLandDate span {
+    font-family: FuturaPTDemi;
+}
+
+.cardContent > .captureDate {
+    width: fit-content;
+    margin: 0 0 0 auto;
+}
+
+@media screen and (max-width: 1330px) {
+    .cardContent .title {
+        font-size: 26px;
+        font-family: FuturaPTDemi;
+        margin: 0;
+    } 
+    .cardContent .launchAndLandDate > * {
+        display: inline-block;
+        font-size: 14px;  
+    }
+    .launchAndLandDate > *:first-child {
+        margin-right: 7px;
+    }
+    .launchAndLandDate img {
+        margin-right: 4px;
+        width: 11px;
+        height: 11px;
+    }
+
 }
