--- a/src/pages/Home/components/PhotoGallery/PhotoGallery.module.css
+++ b/src/pages/Home/components/PhotoGallery/PhotoGallery.module.css
@@ -1,3 +1,8 @@
+.componentTitle {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
 .componentContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
