--- a/src/shared/components/Buttons/Buttons.module.css
+++ b/src/shared/components/Buttons/Buttons.module.css
@@ -10,9 +10,10 @@
     align-items: center;
     cursor: pointer;
     outline: none;
+    border-width: 0;
 }
 
 .button:focus,
 .button:hover {
-    opacity: 0.7;
+    opacity: 1;
 }
